--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -9,14 +9,14 @@ spec:
   chart:
     spec:
       chart: airflow
-      version: "1.17.0"
+      version: "1.7.0"
       sourceRef:
         kind: HelmRepository
         name: apache-airflow
         namespace: flux-system
   values:
-    defaultAirflowTag: "3.0.2"
-    airflowVersion: "3.0.2"
+    defaultAirflowTag: "2.5.1"
+    airflowVersion: "2.5.1"
     fernetKey: "zTxhk7FuGqQVPZVoukLn5bGWOrgHzhQnBnaqAItcZGI="
     env:
       - name: "AIRFLOW__CORE__LOAD_EXAMPLES"
@@ -26,12 +26,12 @@ spec:
       - name: "AIRFLOW__KUBERNETES_EXECUTOR__WORKER_CONTAINER_REPOSITORY"
         value: "apache/airflow"
       - name: "AIRFLOW__KUBERNETES_EXECUTOR__WORKER_CONTAINER_TAG"
-        value: "slim-3.0.2-python3.10"
+        value: "slim-2.5.1-python3.8"
     executor: "KubernetesExecutor"
     createUserJob:
-      useHelmHooks: true
+      useHelmHooks: false
     migrateDatabaseJob:
-      useHelmHooks: true
+      useHelmHooks: false
     dags:
       persistence:
         enabled: False   # DAG을 Git으로만 가져오고, PVC 사용 안함
