--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -9,14 +9,14 @@ spec:
   chart:
     spec:
       chart: airflow
-      version: "1.7.0"
+      version: "1.18.0-dev"
       sourceRef:
         kind: HelmRepository
         name: apache-airflow
         namespace: flux-system
   values:
-    defaultAirflowTag: "2.5.1"
-    airflowVersion: "2.5.1"
+    defaultAirflowTag: "3.0.2"
+    airflowVersion: "3.0.2"
     fernetKey: "zTxhk7FuGqQVPZVoukLn5bGWOrgHzhQnBnaqAItcZGI="
     env:
       - name: "AIRFLOW__CORE__LOAD_EXAMPLES"
