--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: airflow
-      version: "1.18.0-dev"
+      version: "1.18.0"
       sourceRef:
         kind: HelmRepository
         name: apache-airflow
