--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -3,6 +3,8 @@ kind: HelmRelease
 metadata:
   name: airflow
   namespace: dev
+install:
+  timeout: 10m0s
 spec:
   interval: 30s
   releaseName: airflow-dev
@@ -15,8 +17,8 @@ spec:
         name: apache-airflow
         namespace: flux-system
   values:
-    defaultAirflowTag: "2.5.1"
-    airflowVersion: "2.5.1"
+    defaultAirflowTag: "2.4.1"
+    airflowVersion: "2.4.1"
     fernetKey: "zTxhk7FuGqQVPZVoukLn5bGWOrgHzhQnBnaqAItcZGI="
     env:
       - name: "AIRFLOW__CORE__LOAD_EXAMPLES"
@@ -26,10 +28,9 @@ spec:
       - name: "AIRFLOW__KUBERNETES_EXECUTOR__WORKER_CONTAINER_REPOSITORY"
         value: "apache/airflow"
       - name: "AIRFLOW__KUBERNETES_EXECUTOR__WORKER_CONTAINER_TAG"
-        value: "slim-2.5.1-python3.8"
+        value: "slim-2.4.1-python3.8"
     executor: "KubernetesExecutor"
     createUserJob:
       useHelmHooks: false
     migrateDatabaseJob:
       useHelmHooks: false
-    
