added:added postgres pv settings

--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -33,3 +33,8 @@ spec:
       useHelmHooks: false
     migrateDatabaseJob:
       useHelmHooks: false
+    postgresql:
+      primary:
+        persistence:
+          enabled: true
+          storageClass: gp3-csi
