added:postgres storageclass name clarified

--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -36,4 +36,5 @@ spec:
       primary:
         persistence:
           enabled: true
+          storageClassName: gp3-csi
           storageClass: gp3-csi
