edited:values with postgres

--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -32,6 +32,8 @@ spec:
       useHelmHooks: false
     migrateDatabaseJob:
       useHelmHooks: false    
-    persistance:
-      enabled: true
-      storageClassName: gp3-csi
+    postgresql:
+      primary:
+        persistence:
+          enabled: true
+          storageClass: gp3-csi
