edited:fix storageclass to the default one

--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -37,5 +37,5 @@ spec:
       enabled: true
       persistence:
         enabled: true
-        storageClass: gp3-csi
+        storageClass: gp2
         size: 8Gi
