--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -4,19 +4,34 @@ metadata:
   name: airflow
   namespace: dev
 spec:
-  interval: 30s
+  interval: 5m  # 30s → 5m으로 증가 (너무 빈번한 체크 방지)
+  timeout: 15m  # 타임아웃 15분 추가
   releaseName: airflow-dev
   chart:
     spec:
       chart: airflow
-      version: "1.17.0" # 최신 차트 버전으로 업데이트
+      version: "1.17.0"
       sourceRef:
         kind: HelmRepository
         name: apache-airflow
         namespace: flux-system
+  # 설치/업그레이드 정책 추가 (필수)
+  install:
+    timeout: 15m
+    remediation:
+      retries: 3
+  upgrade:
+    timeout: 15m
+    remediation:
+      retries: 3
+      remediateLastFailure: true
+  rollback:
+    timeout: 15m
+    cleanupOnFail: true
+    force: true
   values:
-    defaultAirflowTag: "3.0.2" # 최신 Airflow 앱 버전으로 업데이트
-    airflowVersion: "3.0.2" # 최신 Airflow 앱 버전으로 업데이트
+    defaultAirflowTag: "3.0.2"
+    airflowVersion: "3.0.2"
     fernetKey: "zTxhk7FuGqQVPZVoukLn5bGWOrgHzhQnBnaqAItcZGI="
     env:
       - name: "AIRFLOW__CORE__LOAD_EXAMPLES"
@@ -26,16 +41,55 @@ spec:
       - name: "AIRFLOW__KUBERNETES_EXECUTOR__WORKER_CONTAINER_REPOSITORY"
         value: "apache/airflow"
       - name: "AIRFLOW__KUBERNETES_EXECUTOR__WORKER_CONTAINER_TAG"
-        value: "slim-3.0.2-python3.10" # Airflow 3.x 버전의 권장 Python 버전으로 업데이트
+        value: "slim-3.0.2-python3.10"
     executor: "KubernetesExecutor"
     createUserJob:
       useHelmHooks: false
     migrateDatabaseJob:
       useHelmHooks: false
-    # PostgreSQL 설정
+    
+    # PostgreSQL 설정 추가 (필수 - 없으면 배포 실패)
     postgresql:
       enabled: true
       persistence:
         enabled: true
-        storageClass: gp2
+        storageClass: ""  # 기본 StorageClass 사용
         size: 8Gi
+      resources:
+        limits:
+          memory: 1Gi
+          cpu: 500m
+        requests:
+          memory: 256Mi
+          cpu: 100m
+    
+    # Redis 설정 추가 (필수 - 없으면 배포 실패)
+    redis:
+      enabled: true
+      resources:
+        limits:
+          memory: 512Mi
+          cpu: 500m
+        requests:
+          memory: 128Mi
+          cpu: 100m
+    
+    # 웹서버 리소스 제한 (권장)
+    webserver:
+      resources:
+        limits:
+          memory: 1Gi
+          cpu: 500m
+        requests:
+          memory: 512Mi
+          cpu: 100m
+    
+    # 스케줄러 리소스 제한 (권장)
+    scheduler:
+      resources:
+        limits:
+          memory: 1Gi
+          cpu: 500m
+        requests:
+          memory: 512Mi
+          cpu: 100m
