--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -93,3 +93,15 @@ spec:
         requests:
           memory: 512Mi
           cpu: 100m
+
+    # DAGs: gitSync 전략
+    dags:
+      persistence:
+        enabled: False   # DAG을 Git으로만 가져오고, PVC 사용 안함
+      gitSync:
+        enabled: True    # git-sync sidecar 활성화
+        repo: https://github.com/joshua-data/study-course-airflow-on-aws-dags.git
+        branch: main     # 어떤 브랜치를 pull할 건지
+        maxFailures: 0   # 실패 시 몇 번까지 재시도
+        subPath: "sources"  # repo 내부의 서브디렉토리 (예: sources 폴더 내만 mount)
+        wait: 60         # pull 간격 (초)
